--- a/apps/vld-todolist/project.json
+++ b/apps/vld-todolist/project.json
@@ -1,28 +1,34 @@
 {
-  "name": "todolist",
+  "name": "vld-todolist",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "prefix": "app",
-  "sourceRoot": "apps/todolist/src",
+  "sourceRoot": "apps/vld-todolist/src",
   "tags": [],
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
-        "outputPath": "dist/apps/todolist",
-        "index": "apps/todolist/src/index.html",
-        "main": "apps/todolist/src/main.ts",
-        "polyfills": ["zone.js"],
-        "tsConfig": "apps/todolist/tsconfig.app.json",
+        "outputPath": "dist/apps/vld-todolist",
+        "index": "apps/vld-todolist/src/index.html",
+        "main": "apps/vld-todolist/src/main.ts",
+        "polyfills": [
+          "zone.js"
+        ],
+        "tsConfig": "apps/vld-todolist/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": [
           {
             "glob": "**/*",
-            "input": "apps/todolist/public"
+            "input": "apps/vld-todolist/public"
           }
         ],
-        "styles": ["apps/todolist/src/styles.scss"],
+        "styles": [
+          "apps/vld-todolist/src/styles.scss"
+        ],
         "scripts": []
       },
       "configurations": {
@@ -56,10 +62,10 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "buildTarget": "todolist:build:production"
+          "buildTarget": "vld-todolist:build:production"
         },
         "development": {
-          "buildTarget": "todolist:build:development"
+          "buildTarget": "vld-todolist:build:development"
         }
       },
       "defaultConfiguration": "development"
@@ -67,7 +73,7 @@
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "buildTarget": "todolist:build"
+        "buildTarget": "vld-todolist:build"
       }
     },
     "lint": {
@@ -75,15 +81,17 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
-        "jestConfig": "apps/todolist/jest.config.ts"
+        "jestConfig": "apps/vld-todolist/jest.config.ts"
       }
     },
     "serve-static": {
       "executor": "@nx/web:file-server",
       "options": {
-        "buildTarget": "todolist:build",
+        "buildTarget": "vld-todolist:build",
         "spa": true
       }
     }
