--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@vld-workspace/presto-cuisto": ["libs/presto-cuisto/src/index.ts"],
+      "@vld-workspace/todolist": ["libs/todolist/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
