build: add husky, commitlint and lint-staged

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,6 +1,8 @@
 # Add files here to ignore them from prettier formatting
+**/*.js
 /dist
 /coverage
+/node_modules
 /.nx/cache
 /.nx/workspace-data
 .angular
