--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,9 @@
 {
-  "singleQuote": true
+  "singleQuote": true,
+  "trailingComma": "all",
+  "bracketSpacing": true,
+  "bracketSameLine": true,
+  "printWidth": 100,
+  "semi": true,
+  "quoteProps": "preserve"
 }
