--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -8,12 +8,20 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
-    "target": "es2015",
+    "useDefineForClassFields": false,
+    "target": "es2022",
     "module": "esnext",
+    "typeRoots": ["node_modules/@types"],
+    "types": ["node"],
     "lib": ["es2020", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
+    "esModuleInterop": true,
+    "strictPropertyInitialization": false,
+    "suppressImplicitAnyIndexErrors": true,
+    "noImplicitReturns": false,
     "baseUrl": ".",
+    "allowJs": true,
     "paths": {
       "@vld-workspace/presto-cuisto": ["libs/presto-cuisto/src/index.ts"],
       "@vld-workspace/todolist": ["libs/todolist/src/index.ts"]
